--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -10,7 +10,14 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">Jpom项目管理系统</div>
+        <div class="layui-logo">
+            Jpom项目管理系统
+        </div>
+        <ul class="layui-nav layui-layout-left">
+            #if($safeMode)
+                <li class="layui-nav-item" title="安全模式运行系统将有部分功能受限制，如需解除请联系系统管理员">安全模式运行中</li>
+            #end
+        </ul>
         <ul class="layui-nav layui-layout-right" lay-filter="userOperation">
             <li class="layui-nav-item">
                 <a href="javascript:;">
