--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -52,46 +52,44 @@
 </div>
 </body>
 <script type="text/javascript">
-    layui.use(['form', 'carousel', 'layer'], function () {
-        var $ = layui.$;
-        var form = layui.form;
-        var carousel = layui.carousel;
-        var layer = layui.layer;
+    function loadSuccess() {
+        layui.use(['carousel'], function () {
+            var carousel = layui.carousel;
+            //判断是否在iframe中, 如果是，刷新父页面
+            if (self != top) {
+                parent.window.location.replace(window.location.href);
+            }
 
-        //判断是否在iframe中, 如果是，刷新父页面
-        if (self != top) {
-            parent.window.location.replace(window.location.href);
-        }
-
-        carousel.render({
-            elem: '#div-carousel',
-            width: '100%',
-            height: '100%',
-            anim: 'fade',
-            arrow: 'none',
-            indicator: 'none'
-        });
-
-        form.on('submit(from_login)', function (data) {
-            $.ajax({
-                url: '/userLogin',
-                type: 'POST',
-                dataType: 'json',
-                data: data.field,
-                success: function (data) {
-                    if (200 == data.code) {
-                        window.location.href = '/index';
-                    } else {
-                        layer.msg(data.msg);
-                    }
-                },
-                error: function (err) {
-                    layer.alert(err.msg);
-                }
+            carousel.render({
+                elem: '#div-carousel',
+                width: '100%',
+                height: '100%',
+                anim: 'fade',
+                arrow: 'none',
+                indicator: 'none'
             });
-            return false;
+
+            form.on('submit(from_login)', function (data) {
+                $.ajax({
+                    url: '/userLogin',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: data.field,
+                    success: function (data) {
+                        if (200 == data.code) {
+                            window.location.href = '/index';
+                        } else {
+                            layer.msg(data.msg);
+                        }
+                    },
+                    error: function (err) {
+                        layer.alert(err.msg);
+                    }
+                });
+                return false;
+            });
         });
-    });
+    }
 </script>
 
 </html>
