--- a/src/main/resources/vm/system/whitelistDirectory.vm
+++ b/src/main/resources/vm/system/whitelistDirectory.vm
@@ -37,12 +37,7 @@
 </div>
 </body>
 <script type="text/javascript">
-    layui.use(['form', 'layer'], function () {
-        var $ = layui.$;
-        var form = layui.form;
-        var layer = layui.layer;
-
-
+    function loadSuccess() {
         form.on('submit(formDemo)', function (data) {
             $.ajax({
                 url: './whitelistDirectory_submit',
@@ -63,7 +58,7 @@
             });
             return false;
         });
-    });
+    }
 </script>
 
 </html>
