--- a/src/main/resources/vm/install.vm
+++ b/src/main/resources/vm/install.vm
@@ -33,6 +33,12 @@
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block" style="margin-left: 0px;">
+                    <textarea name="whitelistDirectory" placeholder="请输入项目存放路径白名单，回车支持输入多个路径"
+                              class="layui-textarea"></textarea>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 0px;">
                         <button class="layui-btn layui-btn-danger" lay-submit lay-filter="from_login"
                                 style="width: 100%">确定
                         </button>
