--- a/src/main/resources/vm/user/list.vm
+++ b/src/main/resources/vm/user/list.vm
@@ -72,17 +72,20 @@
                 </div>
             </div>
         </div>
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">管理项目</label>
-                <div class="layui-input-block">
-                    #foreach($pItem in $projects)
-                        <input type="checkbox" name="project" project="$pItem.id" value="$pItem.id"
-                               title="$pItem.name">
-                    #end
+        #if($projects && $projects.size()>0)
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <label class="layui-form-label">管理项目</label>
+                    <div class="layui-input-block">
+                        #foreach($pItem in $projects)
+                            <input type="checkbox" name="project" project="$pItem.id" value="$pItem.id"
+                                   title="$pItem.name">
+                        #end
+                    </div>
                 </div>
             </div>
-        </div>
+        #end
+
         <input type="hidden" lay-submit lay-filter="submitUser" id="user_submit">
     </form>
 </div>
