--- a/src/main/resources/vm/system/whitelistDirectory.vm
+++ b/src/main/resources/vm/system/whitelistDirectory.vm
@@ -21,10 +21,19 @@
     <form action="" class="layui-form" id="form_user">
         <div class="layui-form-item">
             <div class="layui-inline" style="width: 80%;height:30vh;">
-                <label class="layui-form-label">白名单列表</label>
+                <label class="layui-form-label">项目路径</label>
                 <div class="layui-input-block auto">
                     <textarea name="value" placeholder="请输入项目存放路径白名单，回车支持输入多个路径，系统会自动过滤 ../ 路径"
                               class="layui-textarea auto">$!value</textarea>
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-inline" style="width: 80%;height:30vh;">
+                <label class="layui-form-label">证书路径</label>
+                <div class="layui-input-block auto">
+                    <textarea name="certificate" placeholder="请输入项目存放路径白名单，回车支持输入多个路径，系统会自动过滤 ../ 路径"
+                              class="layui-textarea auto">$!certificate</textarea>
                 </div>
             </div>
         </div>
