用户重启项目，无法获取运行结果问题。重启页面自动刷新

--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -101,7 +101,13 @@
 
             ws.onclose = function () {
                 showLogDom.append('WebSocket连接已关闭！<br/>');
-                clearInterval(loopLogTime)
+                clearInterval(loopLogTime);
+                // 如果有权限，自动重连
+                #if($manager)
+                    setTimeout(function () {
+                        window.location.reload();
+                    }, 1000);
+                #end
             };
 
             $('.btn-op').on('click', function () {
